@@ -61,7 +61,10 @@
             android:id="@+id/name"
             style="@style/Widget.Grocy.TextView.Toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:singleLine="false"
+            android:maxLines="3"
+            android:textSize="18sp"/>
 
           <TextView
             style="@style/Widget.Grocy.TextView.ListItem.Description"
@@ -324,7 +327,8 @@
           android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp"
-          android:layout_marginBottom="16dp" />
+          android:layout_marginBottom="16dp"
+          android:layout_marginTop="8dp"/>
 
       </LinearLayout>
 
