@@ -9,6 +9,7 @@
 - Improved: "Should not be frozen" toggle on master product page and warn user if appropriate (#638)
 - Improved: Info shown for action button on overview start page (#540)
 - Improved: Fulfillment check for every ingredient on recipe page
+- Improved: On recipe page ingredients now can be added to shopping list with exclude option (#632)
 - Fixed: Recipe actions throwing errors (thanks @timhae!) (#646)
 - Fixed: Simultaneous display of recipe photos and placeholder images
 - Fixed: Behavior option "reduce app startup time" not working on Android 12+
